refactor(server, services, sql): Code style refactoring of domain and delivery
